kubernetes/prod/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod
  labels:
    app: backend
spec:
  ports:
  - port: 4000
    targetPort: 4000
    name: http
  selector:
    app: backend
  type: ClusterIP
